chore: add and config lerna

--- a/package.json
+++ b/package.json
@@ -1,8 +1,17 @@
 {
   "name": "proffy",
   "version": "1.0.0",
-  "main": "index.js",
-  "private":true,
+  "private": true,
+  "scripts": {
+    "bootstrap": "lerna bootstrap",
+    "dev-all": "npm-run-all -p -c dev:*",
+    "dev-web": "npm-run-all -p -c dev:server dev:web",
+    "dev-mobile": "npm-run-all -p -c dev:server dev:mobile",
+    "dev:mobile": "cd packages/mobile && yarn start",
+    "dev:server": "cd packages/server && yarn start",
+    "dev:web": "cd packages/web && yarn start",
+    "db:migrate": "cd packages/server && yarn knex:migrate"
+  },
   "workspaces": {
     "packages": [
       "packages/*"
@@ -10,7 +19,12 @@
   },
   "author": "Luciano Tavernard <lucianotavernard@gmail.com>",
   "license": "MIT",
+  "dependencies": {
+    "npm-run-all": "^4.1.5"
+  },
   "devDependencies": {
-    "@proffy/eslint-config": "*"
+    "@proffy/eslint-config": "*",
+    "lerna": "^3.22.1"
   }
+
 }
