--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "proffy",
+  "name": "nlw-02",
   "version": "1.0.0",
-  "private": true,
+  "license": "MIT",
   "scripts": {
     "bootstrap": "lerna bootstrap",
     "dev-all": "npm-run-all -p -c dev:*",
@@ -17,8 +17,6 @@
       "packages/*"
     ]
   },
-  "author": "Luciano Tavernard <lucianotavernard@gmail.com>",
-  "license": "MIT",
   "dependencies": {
     "npm-run-all": "^4.1.5"
   },
